# NPUA-OS

./: .gitignore  README.md
lab5/: CMakeLists.txt  anon_mmap.c  build.sh  cp_simple.c  mmap.c  run_all.sh
lab5/writer-reader/: reader.c  writer.c
lab6/: CMakeLists.txt  check_thread.c  get_element.h  run_all.sh  simple_thread.c  task10_sum.c  task1_simple_return.c  task3_detach.c  task8_chain.c  task9_fill.c  thread_cancel.c  thread_cond_variables.c  thread_increment.c  thread_increment_ordered.c
lab7/: CMakeLists.txt  build.sh  run_all.sh  unix_stream_client_chat.c  unix_stream_client_echo.c  unix_stream_server.c  unix_stream_server_chat.c  unix_stream_server_echo.c  unix_stream_server_no_remove.c
lab8/: CMakeLists.txt  build.sh  ipv4_dg_server.c  ipv4_stream_chat_client.c  ipv4_stream_chat_server.c  ipv4_stream_client_echo.c  ipv4_stream_echo_client.c  ipv4_stream_echo_server.c  ipv4_stream_server_chat.c  ipv4_stream_server_echo.c  ipv6_dg_server.c  run_all.sh
